# mcpy-compiler

./: .gitignore  LICENSE  README.md  compiler.py  config.json  config_desc.jsonc  example_config.json  pyproject.toml  searcher.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
BP/: manifest.json
BP/functions/: example_func.mcfunction  test.mc  tick.json
RP/: manifest.json
RP/texts/: en_US.lang
RP/textures/: item_texture.json  terrain_texture.json  texture_list.json
docs/: compiler flags.md  searcher.md
output/BP/: manifest.json
output/BP/functions/: example_func.mcfunction  test.mcfunction  tick.json
output/BP/scripts/: Main.js
output/RP/: manifest.json
output/RP/texts/: en_US.lang
output/RP/textures/: item_texture.json  terrain_texture.json  texture_list.json
src/mcpy-compiler_RoseKat/: mcpy_compiler.py
src/mcpy_compiler/: config.py  mcpy_compiler.py
src/mcpy_compiler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mcpy_compiler_RoseKat/: mcpy_compiler.py
src/mcpy_compiler_RoseKat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
