[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpy_compiler"
version = "0.1.3"
authors = [
  { name="Rose Kat" },
]
description = "A Minecraft bedrock addon compiler made in python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/RoseyKat/mcpy-compiler"
Issues = "https://github.com/RoseyKat/mcpy-compiler/issues"